--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
 
     <div class="actions">
-      <button>New Game</button>
+      <button id="new-game" disabled>New Game</button>
       <div class="spacer"></div>
-      <button>Give Up</button>
+      <button id="give-up">Give Up</button>
     </div>
   </div>
   <script src="./tic-tac-toe.js"></script>
